--- a/ecom/docker-compose.yml
+++ b/ecom/docker-compose.yml
@@ -50,8 +50,8 @@ services:
     ports:
       - "8081:8081"
     environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: pityke17
-      ME_CONFIG_MONGODB_ADMINPASSWORD: 0402
+      ME_CONFIG_MONGODB_ADMINUSERNAME: admin
+      ME_CONFIG_MONGODB_ADMINPASSWORD: pass
       ME_CONFIG_MONGODB_SERVER: mongodb
     networks:
       - microservice-net
