--- a/ecom/services/product/pom.xml
+++ b/ecom/services/product/pom.xml
@@ -85,6 +85,11 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
+			<dependency>
+				<groupId>org.flywaydb</groupId>
+				<artifactId>flyway-maven-plugin</artifactId>
+				<version>10.15.0</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
